--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <table> 
     <tbody>
      <tr> 
-      <td><img src="Rochelle-modified.png" alt="Rochelle Detablan" width="200" height="200"></td> 
+      <td><img src="rochelle-modified.png" alt="Rochelle Detablan" width="200" height="200"></td> 
       <td><h1>Rochelle Detablan</h1> <em>BSIT-1</em> <p>Student of <a href="https://thelewiscollege.edu.ph/" target="blank">
 The Lewis College</a></p> <h3><a href="aboutme.html">About Me|</a><a href="contactme.html">Contact Me</a></h3> </td>
      </tr> 
